# huggingface-resnet-fmnist

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
notebooks/: fminst_model.ipynb  fminst_model_inception.ipynb
src/components/: data_ignestion.py  data_transformation.py
src/components/pipeline/: predict_pipeline.py
templates/: home.html  index.html
