[project]
name = "fmnist"
version = "0.1.0"
description = ""
authors = [
    {name = "wasif"}
]
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
transformers = "4.37"
huggingface-hub = ">=0.29.2,<0.30.0"
tensorflow-io-gcs-filesystem = "0.27.0"
numpy = "<2.0.0"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
flask = "^3.1.0"
pillow = "^11.2.1"


[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
